2025-05-10 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Save A in genPointerSet only when necessary.

2025-05-09 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Prefer X over Y for getFreeReg.
  	* src/mos6502/peeph.def:
  	  Fix Bug-3090 regression.
  	  
2025-05-06 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  More DPTR optimizations.
  	  
2025-05-04 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Improve genMinusDec.
  	  Skip writing to DPTR if it already has the correct value.
  	  Additional genMinusDec improvements.
  	  Renamed several variables in genPointerSet.
  	  Allow register tracking on partial DPTR.

2025-05-03 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/Makefile.in:
  	  Fixed build warning.
   	* src/mos6502/gen.h:
   	  Change REGTEMP size to 6
  	* support/regression/tests/float_single.c.in:
  	  Fix host regression failures.
  	
2025-04-26 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_fslib.s,
  	  device/lib/mos6502/_fsadd.s,
  	  device/lib/mos6502/_fsmul.s,
  	  device/lib/mos6502/Makefile.in,
  	  support/regression/tests/bug1805702.c:
  	  Implement _fsmul in assembly. Separate common fp code in _fslib.s.
  	* device/lib/mos6502/memcpy.s:
  	  Change to more readable labels.
  	* device/lib/mos6502/__sdcc_regs.s,
  	  device/lib/mos6502/_temp.s,
  	  device/lib/mos6502/_dptr.s,
  	  device/lib/mos6502/_ret01.s,
  	  device/lib/mos6502/_ret23.s,
  	  device/lib/mos6502/_ret4567.s,
  	  device/lib/mos6502/Makefile.in:
  	  Combine internal registers to save ZP space.
   	* device/lib/mos6502/fabsf.s:
   	  Implement fabsf in assembly.

2025-04-22 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c:
  	  Fix regression failures in mos6502_stack-auto introduced by register tracking.
  	  
2025-04-21 Gabriele Gorla <gorlik@yahoo.com>

  	* device/lib/mos6502/_mullong.s:
  	  Reimplement mullong.

2025-04-20 Gabriele Gorla <gorlik@yahoo.com>